# nvidia-texture-tools

./: CMakeLists.txt  README.md
.github/workflows/: build-tools.yml
cmake/: OptimalOptions.cmake
project/vc2017/: nvtt.sln
project/vc2017/Nvidia.TextureTools/: Nvidia.TextureTools.csproj
project/vc2017/bc6h/: bc6h.vcxproj
project/vc2017/bc7/: bc7.vcxproj
project/vc2017/imperativeapi/: imperativeapi.vcxproj
project/vc2017/nvassemble/: nvassemble.vcxproj
project/vc2017/nvcompress/: nvcompress.vcxproj
project/vc2017/nvcore/: nvcore.vcxproj
project/vc2017/nvddsinfo/: nvddsinfo.vcxproj
project/vc2017/nvdecompress/: nvdecompress.vcxproj
project/vc2017/nvimage/: nvimage.vcxproj
project/vc2017/nvimgdiff/: nvimgdiff.vcxproj
project/vc2017/nvmath/: nvmath.vcxproj
project/vc2017/nvthread/: nvthread.vcxproj
project/vc2017/nvtt/: nvtt.vcxproj
project/vc2017/nvzoom/: nvzoom.vcxproj
project/vc2017/squish/: squish.vcxproj
project/vc2017/testsuite/: testsuite.vcxproj
src/: CMakeLists.txt  nvconfig.h.in
src/nvmath/: nvmath.h
src/nvtt/squish/: simd_sse.h
